kubernetes/apps/wikijs/wikijs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  namespace: wikijs
  labels:
    app.kubernetes.io/name: wikijs
    app.kubernetes.io/part-of: wikijs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wikijs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wikijs
        app.kubernetes.io/part-of: wikijs
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: wikijs
          image: ghcr.io/requarks/wiki:2.5.300
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
